# django-rest-framework

./: #.gitignore#  .birdseye.db  .codespellrc  .coveragerc  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .hgignore  .hgtags  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.txt  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  Pipfile  README  README.md  README.rst  README.txt  RELEASES  SECURITY.md  aaaaaa  activate.ps1  base.html  codecov.yml  (+27 more)
.github/: FUNDING.yml  YTR  dependabot.yml  release.yml  stale.yml
.tx/: config
api-guide/: authentication.html  content-negotiation.html  contentnegotiation.html  exceptions.html  fields.html  filtering.html  format-suffixes.html  generic-views.html  metadata.html  p.html  pagination.html  parsers.html  permissions.html  relations.html  renderers.html  requests.html  responses.html  reverse.html  routers.html  serializers.html  settings.html  status-codes.html  testing.html  throttling.html  urls.html  validators.html  views.html  viewsets.html
change_implementation/: concept_location.md  impact_analysis.md  other_useful_info.md  source_code_strategy.md
coreapi/: index.html
css/: base.css  bootstrap-responsive.css  bootstrap.css  bootstrap.min.css.map  default.css  drf-styles.css  highlight.css
djangorestframework/: __init__.py  authentication.py  authenticators.py  breadcrumbs.py  builtins.py  compat.py  content.py  contentnegotiation.py  decorators.py  description.py  emitters.py  exceptions.py  fields.py  generics.py  markdownwrapper.py  mediatypes.py  methods.py  mixins.py  modelresource.py  models.py  negotiation.py  parsers.py  permissions.py  renderers.py  request.py  resource.py  resources.py  response.py  reverse.py  routers.py  serializer.py  serializers.py  settings.py  status.py  tests.py  throttling.py  urlpatterns.py  urlresolvers.py  urls.py  utils.py  (+2 more)
djangorestframework.egg-info/: PKG-INFO  SOURCES.txt
docs/: 404.html  CNAME  authenticators.rst  check_sphinx.py  conf.py  contents.rst  csrf.md  emitters.rst  examples.rst  formoverloading.md  guides.rst  howto.rst  index.md  index.rst  library.rst  mkdocs.py  modelresource.rst  parsers.md  parsers.rst  renderers.md  request.md  requirements.txt  resource.rst  response.md  response.rst  serializers.md  status.md  template.html  urls.md  views.md  viewsets-routers.md
docs_theme/: 404.html  base.html  main.html  nav.html  package-lock.json  package.json  webpack.config.js
env/: pip-selfcheck.json
example/: asgi.py  settings.py  urls.py  wsgi.py
examples/: .epio-app  epio.ini  initial_data.json  requirements-epio.txt  requirements.txt  runtests.py  settings.py  urls.py  views.py
flywheel/: authenticators.py  emitters.py  modelresource.py  parsers.py  resource.py  response.py  utils.py
htmlcov/: index.html  rest_framework___init__.html  rest_framework_authentication.html  rest_framework_authtoken___init__.html  rest_framework_authtoken_models.html  rest_framework_authtoken_serializers.html  rest_framework_authtoken_views.html  rest_framework_decorators.html  rest_framework_exceptions.html  rest_framework_fields.html  rest_framework_filters.html  rest_framework_generics.html  rest_framework_mixins.html  rest_framework_models.html  rest_framework_negotiation.html  rest_framework_pagination.html  rest_framework_parsers.html  rest_framework_permissions.html  rest_framework_relations.html  rest_framework_renderers.html  rest_framework_request.html  rest_framework_response.html  rest_framework_reverse.html  rest_framework_routers.html  rest_framework_serializers.html  rest_framework_settings.html  rest_framework_status.html  rest_framework_throttling.html  rest_framework_urlpatterns.html  rest_framework_urls.html  rest_framework_utils___init__.html  rest_framework_utils_breadcrumbs.html  rest_framework_utils_encoders.html  rest_framework_utils_formatting.html  rest_framework_utils_mediatypes.html  rest_framework_views.html  rest_framework_viewsets.html
js/: base.js  bootstrap-2.1.1-min.js  highlight.pack.js  theme.js
licenses/: bootstrap.md  jquery.json-view.md
mkdocs/: search_index.json
requirements/: requirements-codestyle.txt  requirements-documentation.txt  requirements-mypy.txt  requirements-necessary.txt  requirements-optionals.txt  requirements-packaging.txt  requirements-testing.txt
rest_framework/: __init__.py  apps.py  authentication.py  cache_lookups.py  caches.py  checks.py  class_validator.py  compat.py  compound_fields.py  db_routers.py  decorators.py  documentation.py  exceptions.py  fields.py  filters.py  genericrelations.py  generics.py  handlers.py  metadata.py  middleware.py  mixins.py  models.py  negotiation.py  optimization.py  pagination.py  parsers.py  permissions.py  relations.py  renderers.pxd  renderers.py  request.py  resolvers.py  resources.py  response.py  rest_views.py  reverse.py  routers.py  schemas.py  serializers.py  settings.py  (+10 more)
rest_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rest_framework_3/: authentication.py  decorators.py  exceptions.py  fields.py  filters.py  generics.py  metadata.py  mixins.py  negotiation.py  pagination.py  parsers.py  permissions.py  relations.py  renderers.py  request.py  routers.py  serializers.py  settings.py  test.py  throttling.py  urlpatterns.py  urls.py  validators.py  versioning.py  views.py  viewsets.py
search/: main.js  search.js  search_index.json  worker.js
src/: settings.py  urls.py
test_read_only_default/: test_read_only_default.py  urls.py
testproject/: urls.py
tests/: conftest.py  description.py  fields.py  models.py  namespaced_urls.py  put_as_create_workspace.txt  router_test_urls.py  serializers.py  settings.py  test_api_client.py  test_atomic_requests.py  test_authentication.py  test_authtoken.py  test_bound_fields.py  test_breadcrumbs.py  test_compat.py  test_cursor_pagination.py  test_db_routers.py  test_decorators.py  test_description.py  test_encoders.py  (+88 more)
(+1018 files in other folders)
