[metadata]
license_files = LICENSE.md

[tool:pytest]
addopts=--tb=short --strict-markers -ra
testpaths = tests
filterwarnings = ignore:CoreAPI compatibility is deprecated*:rest_framework.RemovedInDRF317Warning

[flake8]
ignore = E501,W503,W504
banned-modules = json = use from rest_framework.utils import json!

[isort]
skip=.tox
atomic=true
multi_line_output=5
extra_standard_library=types
known_third_party=pytest,_pytest,django,pytz,uritemplate
known_first_party=rest_framework,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = rest_framework/*,tests/*
branch = 1

[coverage:report]
include = rest_framework/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = */kickstarter-announcement.md,*.js,*.map,*.po
ignore-words-list = fo,malcom,ser
